crates/reinhardt-urls/routers-macros/tests/ui/fail/invalid_character_space.rs
use reinhardt_routers_macros::path;

fn main() {
	// Error: spaces not allowed in path
	let _path = path!("/user profiles/");
}
