crates/reinhardt-urls/routers-macros/tests/ui/fail/invalid_character_space.stderr
error: Invalid character ' ' at position 5
       URL paths may only contain:
       - Alphanumeric characters (a-z, A-Z, 0-9)
       - Hyphens (-)
       - Underscores (_)
       - Slashes (/)
       - Dots (.)
       - Wildcards (*)
       - Curly braces for parameters ({, })
 --> tests/ui/fail/invalid_character_space.rs:5:20
  |
5 |     let _path = path!("/user profiles/");
  |                       ^^^^^^^^^^^^^^^^^
